--- a/css/style.css
+++ b/css/style.css
@@ -1195,7 +1195,7 @@ h6 {
 --------------------------------------------------------------*/
 
 #footer {
-  background: #00428a;
+  background: #2cb802;
   padding: 0 0 30px 0;
   color: #eee;
   font-size: 14px;
