--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ h6 {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #007bff;
+  background: #ffc107;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -235,8 +235,8 @@ h6 {
 }
 
 #intro .intro-info .btn-get-started {
-  background: #007bff;
-  border: 2px solid #007bff;
+  background: #ffc107;
+  border: 2px solid #ffc107;
   color: #fff;
 }
 
@@ -251,8 +251,8 @@ h6 {
 }
 
 #intro .intro-info .btn-services:hover {
-  background: #007bff;
-  border-color: #007bff;
+  background: #ffc107;
+  border-color: #ffc107;
   color: #fff;
 }
 
