--- a/css/style.css
+++ b/css/style.css
@@ -1408,7 +1408,7 @@ h6 {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   #intro .intro-info {
     width: 100%;
   }
@@ -1439,6 +1439,17 @@ h6 {
   .center{
     text-align: center
   }
+  .donation{
+    background: none;
+    border: none;
+    color: #fff;
+    font-family: "Montserrat", sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    display: inline-block;
+    transition: 0.5s;
+  }
 }
 
 @media (max-width: 574px) {
@@ -1447,5 +1458,16 @@ h6 {
   }
   .center{
     text-align: center
+  }
+  .donation{
+    background: none;
+    border: none;
+    color: #fff;
+    font-family: "Montserrat", sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    display: inline-block;
+    transition: 0.5s;
   }
 }
