--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,7 @@ h6 {
   background: #ffc107;
   border: 2px solid #ffc107;
   color: rgb(8, 8, 8);
+  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
 }
 
 #intro .intro-info .btn-get-started:hover {
